--- a/.github/workflows/docker-airflow-acryl.yml
+++ b/.github/workflows/docker-airflow-acryl.yml
@@ -1,4 +1,5 @@
 name: datahub-airflow docker acryl
+
 on:
   workflow_run:
     workflows: ["pypi-release metadata-ingestion"]
@@ -6,6 +7,7 @@ on:
       - completed
 
 jobs:
+
   setup:
     # if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
@@ -14,8 +16,10 @@ jobs:
       publish: ${{ steps.publish.outputs.publish }}
       python_release_version: ${{ steps.python_release_version.outputs.release_version }}
     steps:
+
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Compute Tag
         id: tag
         run: |
@@ -24,6 +28,7 @@ jobs:
           TAG=$(echo ${GITHUB_REF} | sed -e 's,refs/tags/,,g')
           echo "tag=$TAG"
           echo "::set-output name=tag::$TAG"
+
       - name: Check whether publishing enabled
         id: publish
         env:
@@ -31,6 +36,7 @@ jobs:
         run: |
           echo "Enable publish: ${{ env.ENABLE_PUBLISH != '' }}"
           echo "::set-output name=publish::${{ env.ENABLE_PUBLISH != '' }}"
+
       - name: Compute Python Release Version
         id: python_release_version
         run: |
@@ -39,15 +45,19 @@ jobs:
           RELEASE_VERSION=$(echo ${GITHUB_REF} | sed -e 's,refs/tags/v,,g')
           echo "release_version=$RELEASE_VERSION"
           echo "::set-output name=release_version::$RELEASE_VERSION"
+
   push_to_registries:
+
     name: Build and Push Docker Image to Docker Hub
     runs-on: ubuntu-latest
     needs: setup
     steps:
+
       - name: Check out the repo
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - name: Docker meta
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
@@ -58,12 +68,14 @@ jobs:
           # add git short SHA as Docker tag
           tag-custom: ${{ needs.setup.outputs.tag }}
           tag-custom-only: true
+
       - name: Login to DockerHub
         if: ${{ needs.setup.outputs.publish == 'true' }}
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.ORG_DOCKER_PASSWORD }}
+
       - name: Build and Push image
         uses: docker/build-push-action@v2
         with:
@@ -73,3 +85,17 @@ jobs:
           push: ${{ needs.setup.outputs.publish == 'true' }}
           build-args: |
             RELEASE_VERSION=${{ needs.setup.outputs.python_release_version }}
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@2a2157eb22c08c9a1fac99263430307b8d1bc7a2
+        with:
+          image-ref: 'docker.io/acryldata/airflow:${{ RELEASE_VERSION }}'
+          format: 'template'
+          template: '@/contrib/sarif.tpl'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
