--- a/.github/workflows/docker-airflow-acryl.yml
+++ b/.github/workflows/docker-airflow-acryl.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@2a2157eb22c08c9a1fac99263430307b8d1bc7a2
         with:
-          image-ref: 'docker.io/acryldata/airflow:${{ RELEASE_VERSION }}'
+          image-ref: 'docker.io/acryldata/airflow:${{ needs.setup.outputs.python_release_version }}'
           format: 'template'
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
