--- a/metadata-jobs/mce-consumer/build.gradle
+++ b/metadata-jobs/mce-consumer/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile spec.product.pegasus.restliClient
     compile spec.product.pegasus.restliCommon
     compile externalDependency.elasticSearchRest
-    compile externalDependency.kafkaAvroSerde
+//    compile externalDependency.kafkaAvroSerde
 
     compile externalDependency.springKafka
     compile externalDependency.springActuator
