--- a/metadata-integration/java/datahub-client/build.gradle
+++ b/metadata-integration/java/datahub-client/build.gradle
@@ -26,8 +26,11 @@ tasks.withType(Test).configureEach {
 
 dependencies {
 
-    implementation project(':metadata-models')
-    compile externalDependency.avro_1_7
+  implementation project(':metadata-models')
+  //implementation project(':kafka-avro-serializer') {
+//    exclude group: "org.apache", module: "avro"
+  //}
+  compile externalDependency.avro_1_7
     constraints {
       implementation('commons-collections:commons-collections:3.2.2') {
         because 'Vulnerability Issue'
@@ -39,9 +42,6 @@ dependencies {
     runtimeOnly externalDependency.jna
     implementation externalDependency.springContext
     implementation externalDependency.swaggerAnnotations
-    implementation(externalDependency.kafkaAvroSerializer) {
-      exclude group: "org.apache.avro"
-    }
     
     compileOnly externalDependency.lombok
     annotationProcessor externalDependency.lombok
