Adds kafka serde classes and modifies java code to use them

--- a/metadata-jobs/mae-consumer/build.gradle
+++ b/metadata-jobs/mae-consumer/build.gradle
@@ -24,10 +24,9 @@ dependencies {
     compile project(':metadata-events:mxe-avro-1.7')
     compile project(':metadata-events:mxe-registration')
     compile project(':metadata-events:mxe-utils-avro-1.7')
-
+    compile project(':kafka-avro-serde')
 
     compile externalDependency.elasticSearchRest
-//    compile externalDependency.kafkaAvroSerde
     compile externalDependency.neo4jJavaDriver
 
     compile externalDependency.springKafka
