--- a/kafka-avro-serde/build.gradle
+++ b/kafka-avro-serde/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'java'
 
 dependencies {
+    compile project(':metadata-events:mxe-avro-1.7')
+    compile project(':metadata-events:mxe-utils-avro-1.7')
+    compile project(':metadata-utils')
+
     compile externalDependency.lombok
     compile externalDependency.avro_1_7
     compile externalDependency.kafkaClients
     annotationProcessor externalDependency.lombok
 
-    testCompile externalDependency.mockito
-    testCompile externalDependency.testng
-    testAnnotationProcessor externalDependency.lombok
+    testCompile externalDependency.assertJ
 }
