--- a/metadata-integration/java/datahub-client/build.gradle
+++ b/metadata-integration/java/datahub-client/build.gradle
@@ -15,21 +15,19 @@ jar.enabled = false // Since we only want to build shadow jars, disabling the re
 
 tasks.withType(JavaCompile).configureEach {
     javaCompiler = javaToolchains.compilerFor {
-        languageVersion = JavaLanguageVersion.of(8)
+        languageVersion = JavaLanguageVersion.of(11)
     }
 }
 tasks.withType(Test).configureEach {
     javaLauncher = javaToolchains.launcherFor {
-        languageVersion = JavaLanguageVersion.of(8)
+        languageVersion = JavaLanguageVersion.of(11)
     }
 }
 
 dependencies {
 
   implementation project(':metadata-models')
-  //implementation project(':kafka-avro-serializer') {
-//    exclude group: "org.apache", module: "avro"
-  //}
+  implementation project(':kafka-avro-serde')
   compile externalDependency.avro_1_7
     constraints {
       implementation('commons-collections:commons-collections:3.2.2') {
