--- a/metadata-service/factories/build.gradle
+++ b/metadata-service/factories/build.gradle
@@ -9,12 +9,13 @@ dependencies {
   compile project(':metadata-service:restli-servlet-impl')
   compile project(':metadata-dao-impl:kafka-producer')
   compile project(':ingestion-scheduler')
+  compile project(':kafka-avro-serde')
+
   compile externalDependency.awsGlueSchemaRegistrySerde
   compile externalDependency.elasticSearchRest
   compile externalDependency.httpClient
   compile externalDependency.gson
   compile externalDependency.kafkaClients
-//  compile externalDependency.kafkaAvroSerde
   compile externalDependency.lombok
   compile externalDependency.servletApi
   compile externalDependency.springBeans
