--- a/settings.gradle
+++ b/settings.gradle
@@ -46,4 +46,4 @@ include 'ingestion-scheduler'
 include 'datahub-ranger-plugin'
 include 'metadata-ingestion-modules:airflow-plugin'
 include 'smoke-test'
-include 'kafka-avro-serializer'
+include 'kafka-avro-serde'
