--- a/metadata-service/factories/src/main/resources/application.yml
+++ b/metadata-service/factories/src/main/resources/application.yml
@@ -168,11 +168,11 @@ kafka:
     concurrency: ${KAFKA_LISTENER_CONCURRENCY:1}
   bootstrapServers: ${KAFKA_BOOTSTRAP_SERVER:http://localhost:9092}
   schemaRegistry:
-    type: ${SCHEMA_REGISTRY_TYPE:KAFKA} # KAFKA or AWS_GLUE
-    url: ${KAFKA_SCHEMAREGISTRY_URL:http://localhost:8081} # Application only for type = kafka
-    awsGlue:
-      region: ${AWS_GLUE_SCHEMA_REGISTRY_REGION:us-east-1}
-      registryName: ${AWS_GLUE_SCHEMA_REGISTRY_NAME:#{null}}
+    type: ${SCHEMA_REGISTRY_TYPE:INTERNAL} # INTERNAL or KAFKA or AWS_GLUE
+    #url: ${KAFKA_SCHEMAREGISTRY_URL:http://localhost:8081} # Application only for type = kafka
+    #awsGlue:
+    #  region: ${AWS_GLUE_SCHEMA_REGISTRY_REGION:us-east-1}
+    #  registryName: ${AWS_GLUE_SCHEMA_REGISTRY_NAME:#{null}}
   schema:
     registry:
       security:
