--- a/metadata-events/mxe-avro-1.7/build.gradle
+++ b/metadata-events/mxe-avro-1.7/build.gradle
@@ -5,6 +5,17 @@ configurations {
 apply plugin: 'io.acryl.gradle.plugin.avro'
 apply plugin: 'java'
 
+tasks.withType(JavaCompile).configureEach {
+  javaCompiler = javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(8)
+  }
+}
+tasks.withType(Test).configureEach {
+  javaLauncher = javaToolchains.launcherFor {
+    languageVersion = JavaLanguageVersion.of(8)
+  }
+}
+
 dependencies {
   compile externalDependency.avro_1_7
   compile(externalDependency.avroCompiler_1_7) {
