--- a/metadata-integration/java/datahub-client/build.gradle
+++ b/metadata-integration/java/datahub-client/build.gradle
@@ -15,12 +15,12 @@ jar.enabled = false // Since we only want to build shadow jars, disabling the re
 
 tasks.withType(JavaCompile).configureEach {
     javaCompiler = javaToolchains.compilerFor {
-        languageVersion = JavaLanguageVersion.of(11)
+        languageVersion = JavaLanguageVersion.of(8)
     }
 }
 tasks.withType(Test).configureEach {
     javaLauncher = javaToolchains.launcherFor {
-        languageVersion = JavaLanguageVersion.of(11)
+        languageVersion = JavaLanguageVersion.of(8)
     }
 }
 
@@ -48,6 +48,10 @@ dependencies {
     testCompile externalDependency.mockServerClient
     testCompile externalDependency.testContainers
     testCompile externalDependency.httpAsyncClient
+
+    testCompile(externalDependency.kafkaAvroSerializer) {
+      exclude group: "org.apache.avro"
+    }
 
     swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.33'
 }
@@ -121,7 +125,10 @@ shadowJar {
   relocate 'org.I0Itec.zkclient', 'datahub.shaded.org.I0Itec.zkclient'
   relocate 'net.jpountz', 'datahub.shaded.net.jpountz'
   relocate 'com.github.luben', 'datahub.shaded.com.github.luben'
- 
+  relocate 'common.message', 'datahub.shaded.common.message'
+  relocate 'com.zwitserloot.cmdreader', 'datahub.shaded.com.zwitserloot.cmdreader'
+  relocate 'lombok', 'datahub.shaded.lombok'
+  relocate 'org.objectweb', 'datahub.shaded.org.objectweb'
   finalizedBy checkShadowJar
 }
 
