--- a/kafka-avro-serde/build.gradle
+++ b/kafka-avro-serde/build.gradle
@@ -14,9 +14,10 @@ tasks.withType(Test).configureEach {
 dependencies {
     compile project(':metadata-events:mxe-avro-1.7')
 
-    compile externalDependency.lombok
     compile externalDependency.avro_1_7
     compile externalDependency.kafkaClients
+
+    implementation externalDependency.slf4jApi
     compileOnly externalDependency.lombok
 
     testCompile externalDependency.assertJ
