--- a/metadata-integration/java/datahub-client/build.gradle
+++ b/metadata-integration/java/datahub-client/build.gradle
@@ -35,7 +35,7 @@ dependencies {
       }
     }
 
-    implementation externalDependency.logbackClassic
+    runtimeOnly externalDependency.logbackClassic
     compileOnly externalDependency.httpAsyncClient
     implementation externalDependency.jacksonDataBind
     implementation externalDependency.javaxValidation
@@ -114,6 +114,7 @@ shadowJar {
   relocate 'org.stringtemplate', 'datahub.shaded.org.stringtemplate'
   relocate 'org.abego.treelayout', 'datahub.shaded.treelayout'
   relocate 'org.slf4j', 'datahub.shaded.slf4j'
+  relocate 'ch.qos.logback', 'datahub.shaded.ch.qos.logback'
   relocate 'javax.annotation', 'datahub.shaded.javax.annotation'
   relocate 'com.github.benmanes.caffeine', 'datahub.shaded.com.github.benmanes.caffeine'
   relocate 'org.checkerframework', 'datahub.shaded.org.checkerframework'
