try to send coverage to codecov

--- a/.github/workflows/metadata-ingestion.yml
+++ b/.github/workflows/metadata-ingestion.yml
@@ -66,6 +66,7 @@ jobs:
         with:
           name: Test Results (metadata ingestion ${{ matrix.python-version }})
           path: |
+            **/coverage*.xml
             **/build/reports/tests/test/**
             **/build/test-results/test/**
             **/junit.*.xml
