--- a/metadata-ingestion/build.gradle
+++ b/metadata-ingestion/build.gradle
@@ -11,7 +11,7 @@ if (!project.hasProperty("extra_pip_requirements")) {
     ext.extra_pip_requirements = ""
 }
 
-def get_coverage_arg { test_name ->
+def get_coverage_arg(test_name) {
   return f"--cov-report term --cov-report xml:coverage_${test_name}.xml "
 }
 
