--- a/metadata-ingestion/build.gradle
+++ b/metadata-ingestion/build.gradle
@@ -12,7 +12,7 @@ if (!project.hasProperty("extra_pip_requirements")) {
 }
 
 def get_coverage_arg(test_name) {
-  return f"--cov-report term --cov-report xml:coverage_${test_name}.xml "
+  return "--cov-report term --cov-report xml:coverage_${test_name}.xml "
 }
 
 task checkPythonVersion(type: Exec) {
@@ -125,7 +125,7 @@ task testQuick(type: Exec, dependsOn: [installDev, ':metadata-models:generateJso
   inputs.files(project.fileTree(dir: "src/", include: "**/*.py"))
   inputs.files(project.fileTree(dir: "tests/"))
   outputs.dir("${venv_name}")
-  cvg_arg = get_coverage_arg("quick")
+  def cvg_arg = get_coverage_arg("quick")
   commandLine 'bash', '-c',
     "source ${venv_name}/bin/activate && pytest ${cvg_arg} --durations=20 -m 'not integration and not integration_batch_1 and not slow_integration' -vv --continue-on-collection-errors --junit-xml=junit.quick.xml"
 }
@@ -154,13 +154,13 @@ task testSingle(dependsOn: [installDevTest]) {
 }
 
 task testIntegration(type: Exec, dependsOn: [installDevTest]) {
-  cvg_arg = get_coverage_arg("int")
+  def cvg_arg = get_coverage_arg("int")
   commandLine 'bash', '-c',
     "source ${venv_name}/bin/activate && pytest ${cvg_arg} --durations=50 -m 'integration' -vv --continue-on-collection-errors --junit-xml=junit.integration.xml"
 }
 
 task testIntegrationBatch1(type: Exec, dependsOn: [installDevTest]) {
-  cvg_arg = get_coverage_arg("intBatch1")
+  def cvg_arg = get_coverage_arg("intBatch1")
   commandLine 'bash', '-c',
     "source ${venv_name}/bin/activate && pytest ${cvg_arg} --durations=50 -m 'integration_batch_1' -vv --continue-on-collection-errors --junit-xml=junit.integrationbatch1.xml"
 }
@@ -171,7 +171,7 @@ task testFull(type: Exec, dependsOn: [installDevTest]) {
 }
 
 task testSlowIntegration(type: Exec, dependsOn: [installDevTest]) {
-  cvg_arg = get_coverage_arg("intSlow")
+  def cvg_arg = get_coverage_arg("intSlow")
   commandLine 'bash', '-c',
     "source ${venv_name}/bin/activate && pytest ${cvg_arg} --durations=20 -m 'slow_integration' -vv --continue-on-collection-errors --junit-xml=junit.slow.integration.xml"
 }
