--- a/.github/workflows/coverage-report.yml
+++ b/.github/workflows/coverage-report.yml
@@ -11,7 +11,7 @@ jobs:
     name: Upload coverage
     runs-on: ubuntu-latest
     steps:
-      - name: Download and Extract Test Results
+      - name: Download and Extract Coverage Results
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
@@ -27,12 +27,3 @@ jobs:
             unzip -d "$name" "$name.zip"
           done
           ls -alh
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          directory: .
-          fail_ci_if_error: true
-          flags: pytests
-          name: codecov-python
-          verbose: true
