--- a/.github/workflows/metadata-ingestion.yml
+++ b/.github/workflows/metadata-ingestion.yml
@@ -31,16 +31,19 @@ jobs:
       # DATAHUB_LOOKML_GIT_TEST_SSH_KEY: ${{ secrets.DATAHUB_LOOKML_GIT_TEST_SSH_KEY }}
     strategy:
       matrix:
-        # TODO revert this change. Only to make test faster
-        python-version: ["3.7"]
+        python-version: ["3.7", "3.10"]
         command:
           [
+            "lint",
             "testQuick",
-            "testIntegrationBatch1"
+            "testIntegrationBatch1",
+            "testSlowIntegration",
           ]
         include:
           - python-version: "3.7"
             extraPythonRequirement: "sqlalchemy==1.3.24 apache-airflow~=2.2.0"
+          - python-version: "3.10"
+            extraPythonRequirement: "sqlalchemy~=1.4.0 apache-airflow>=2.4.0"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -72,7 +75,7 @@ jobs:
           directory: .
           fail_ci_if_error: true
           flags: pytest
-          name: codecov-${{ matrix.python-version }}
+          name: codecov-${{ matrix.python-version }}-${{ matrix.command }})
           verbose: true
       - name: Upload test results to BuildPulse for flaky test detection
         if: '!cancelled()'
