--- a/.github/workflows/metadata-ingestion.yml
+++ b/.github/workflows/metadata-ingestion.yml
@@ -36,6 +36,7 @@ jobs:
           [
             "lint",
             "testQuick",
+            "testIntegration",
             "testIntegrationBatch1",
             "testSlowIntegration",
           ]
