--- a/.github/workflows/metadata-ingestion.yml
+++ b/.github/workflows/metadata-ingestion.yml
@@ -70,13 +70,14 @@ jobs:
             **/build/test-results/test/**
             **/junit.*.xml
       - name: Upload coverage to Codecov
+        if: ${{ matrix.python-version == '3.10' }}
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           directory: .
           fail_ci_if_error: true
-          flags: pytest-${{ matrix.python-version }}-${{ matrix.command }})
-          name: pytest-${{ matrix.python-version }}-${{ matrix.command }})
+          flags: pytest-${{ matrix.command }}
+          name: pytest-${{ matrix.command }}
           verbose: true
       - name: Upload test results to BuildPulse for flaky test detection
         if: '!cancelled()'
