--- a/li-utils/build.gradle
+++ b/li-utils/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'jacoco'
 apply plugin: 'pegasus'
 
 tasks.withType(JavaCompile).configureEach {
@@ -31,6 +32,19 @@ dependencies {
 idea {
     module {
         sourceDirs += file('src/main/javaPegasus')
+    }
+}
+
+test {
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+      xml.enabled true
+      csv.enabled false
+      html.enabled true
     }
 }
 
