--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -57,13 +57,13 @@ jobs:
         run: |
           if [[ "${{ matrix.command }}" == "BUILD_JAVA" ]]; then
             ./gradlew build -x :metadata-ingestion:build -x :metadata-ingestion:check -x docs-website:build -x :metadata-integration:java:spark-lineage:test -x :metadata-io:test -x :metadata-ingestion-modules:airflow-plugin:build -x :datahub-frontend:build -x :datahub-web-react:build --parallel
-            echo "files=./li-utils/build/reports/jacoco/test/jacocoTestReport.xml" >> $GITHUB_OUTPUT
+            echo "files=$(pwd)/li-utils/build/reports/jacoco/test/jacocoTestReport.xml" >> $GITHUB_OUTPUT
           else if [[ "${{ matrix.command }}" == "BUILD_FRONTEND" ]]; then
             ./gradlew :datahub-frontend:build :datahub-web-react:build --parallel
-            echo "files=." >> $GITHUB_OUTPUT
+            echo "files=$(pwd)" >> $GITHUB_OUTPUT
           else
             ./gradlew :metadata-ingestion-modules:airflow-plugin:build --parallel
-            echo "files=." >> $GITHUB_OUTPUT
+            echo "files=$(pwd)" >> $GITHUB_OUTPUT
           fi
         env:
           NODE_OPTIONS: "--max-old-space-size=3072"
