--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -74,7 +74,7 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           directory: steps.gradle_step.outputs.files
           fail_ci_if_error: false
-          flags: java-${{ matrix.command }
+          flags: java-${{ matrix.command }}
           name: java-${{ matrix.command }}
           verbose: true
       - name: Upload coverage to Codecov
