--- a/.github/workflows/metadata-ingestion.yml
+++ b/.github/workflows/metadata-ingestion.yml
@@ -1,5 +1,7 @@
 name: metadata ingestion
 on:
+  schedule:
+    - cron: '0 0 * * *' # runs every day at midnight UTC
   push:
     branches:
       - master
