--- a/.github/workflows/qodana-scan.yml
+++ b/.github/workflows/qodana-scan.yml
@@ -1,10 +1,11 @@
 name: Qodana
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *' # runs every day at midnight UTC
   pull_request:
-  push:
-    branches:
-      - master
+    paths:
+      - "**/*.java"
 
 jobs:
   qodana:
