--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -73,7 +73,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          directory: steps.gradle_step.outputs.files
+          directory: ${{ steps.gradle_step.outputs.files }}
           fail_ci_if_error: false
           flags: java-${{ matrix.command }}
           name: java-${{ matrix.command }}
